# eframe-egui-boilerplate

./: Cargo.toml  README.md  t.sh
src/: app.rs  lib.rs  macros.rs  main.rs  state.rs
